--- a/GraveFinderCabron/gravefinder/Paginas/buscador/css/busqueda.css
+++ b/GraveFinderCabron/gravefinder/Paginas/buscador/css/busqueda.css
@@ -1,74 +1,25 @@
-:root{
-    --background: #d8dde0;
-    --contenedor: #c1bdbf;
-    --letraCambio: #000015;
-    --cambio: #9d9b9d;
-    --letra: #4d534d;
-	--menu: #333;
-}
-
-body{
-    margin: 0;
-    padding: 0;
-    background-color: black;
-}
-html {
-    scroll-behavior: smooth;
-}
-.nav-container{
-    position: fixed;
-    top: 0;
-    width: 100%;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #fff;
-    height: 46px;
-}
-.a-container{
-    float: left;
-    display: flex;
-}
-.logo-container{
-    float: right;
-    display: flex;
-}
-.img-logo{
-    height: 46px;
-    width: 60px;
-}
-.a-menu{
-    display: block;
-    color: --menu;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
-.a-menu:hover {
-    background-color: #eee;
-    font-weight: bold;
-  }
-
 
 body{
     margin:0;
     padding: 0;
-    background-color: var(--contenedor);
+    background-color: #c1bdbf;
+}
+html {
+    scroll-behavior: smooth;
 }
 
-
 .container {
-	background-color: var(--background);
-	color: var(--letra);
+	background-color: #d8dde0;
+	color:  #4d534d;
 	margin: 10vh auto;
 	border-radius: 16px;
 	padding: 30px;
 	width: 50vw;
-	border: var(--background) 1px solid;
+	border: #d8dde0 1px solid;
 	text-align: center;
 }
 .container label {
-    font-size: 1.5em;
+	font-size: 1.5em;
 	margin-bottom: 5px;
 	display: inline-block;
     text-align: center;
@@ -79,32 +30,32 @@ body{
 	text-align: center;
 }
 .demo-input-box {
-    text-align: center;
+	text-align: center;
 	padding: 8px;
-	border: var(--background) 1px solid;
+	border: #d8dde0 1px solid;
 	border-radius: 16px;
 	width: 100%;
     transition: .3s;
 }
 .demo-input-box:focus{
-    background-position: right center;
+	background-position: right center;
 	font-weight: bold;
 	font-size: 1.3em;
 }
 .demo-input-box:hover{
-    background-position: right center;
+	background-position: right center;
 	font-weight: bold;
 	font-size: 1.3em;
 }
 .btnBuscar{
-    padding: 8px;
+	padding: 8px;
 	cursor: pointer;
 	width: 100%;
-	color: var(--letra);
+	color:  #4d534d;
 	background-size: 200% auto;
 	margin: 0px 0px 5px 0px;
 	transition: .3s;
-	background-color: var(--background);
+	background-color: #d8dde0;
     font-size: 1em;
 	border: none;
 }
@@ -114,3 +65,36 @@ body{
 	font-size: 1.7em;
 }
 
+.nav-container{
+	position: fixed;
+	top: 0;
+	width: 100%;
+	margin: 0;
+	padding: 0;
+	overflow: hidden;
+	background-color: #fff;
+	height: 46px;
+}
+.a-container{
+	float: left;
+	display: flex;
+}
+.logo-container{
+	float: right;
+	display: flex;
+}
+.img-logo{
+	height: 46px;
+	width: 60px;
+}
+.a-menu{
+	display: block;
+	color: #333;
+	text-align: center;
+	padding: 14px 16px;
+	text-decoration: none;
+}
+.a-menu:hover {
+	background-color: #eee;
+	font-weight: bold;
+  }
